<resources>
    <string name="app_name">ItexBlog</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="body_message">Life is beautiful, its beautiful. Enjoy it! \nLife is beautiful, its beautiful. Enjoy it!
        Life is beautiful, its beautiful. Enjoy it! \nLife is beautiful, its beautiful. Enjoy it!
        Life is beautiful, its beautiful. Enjoy it! \nLife is beautiful, its beautiful. Enjoy it!

    </string>
    <string name="like_btn">Like button</string>
    <string name="delete_btn">Delete button</string>
    <string name="edit_btn">Edit button</string>
    <string name="comments"><u>1 Comments</u></string>
    <string name="action_profile">Profile</string>
    <string name="deleteall">Delete all posts</string>
    <string name="theme">Change Theme</string>
    <string name="exit">Exit</string>
    <string name="Add_an_image"><u>Add an image</u></string>
    <string name="TakeAPhoto"><u>Take a phot</u>o</string>
    <string name="remove_image">Remove image</string>
    <string name="add_comment">Add comment</string>
    <string name="comment">Comment</string>

</resources>
