<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        android:layout_margin="10dp">
        <RelativeLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/post_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Title"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                android:ellipsize="end"/>

            <TextView
                android:id="@+id/post_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Date"
                android:layout_alignParentEnd="true"
                android:ellipsize="end"/>
            <TextView
                android:id="@+id/post_body"
                android:layout_marginTop="10dp"
                android:layout_below="@id/post_title"
                android:layout_width="match_parent"
                android:text="@string/body_message"
                android:textAlignment="viewEnd"
                android:ellipsize="end"
                android:gravity="start|end"
                android:justificationMode="inter_word"
                android:maxLines="3"
                android:layout_height="wrap_content"/>

            <View
                android:id="@+id/divider"
                android:layout_marginTop="5dp"
                android:layout_below="@id/post_body"
                style="@style/Divider"/>
            <ImageView
                android:id="@+id/post_image"
                android:layout_below="@id/divider"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="5dp"
                android:visibility="gone"
                android:scaleType="fitXY"
                app:srcCompat="@null"/>

            <RelativeLayout
                android:layout_below="@id/post_image"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"

                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/edit_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/edit_btn"
                    app:srcCompat="@drawable/ic_edit_white"/>

                <ImageView
                    android:id="@+id/like_btn"
                    android:contentDescription="@string/like_btn"
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/delete_btn"
                    app:srcCompat="@drawable/ic_favorite_white"/>

                <ImageView
                    android:id="@+id/delete_btn"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@id/edit_btn"
                    android:contentDescription="@string/delete_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_delete_white"/>
                <TextView
                    android:id="@+id/num_of_likes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:textColor="@color/colorPrimary"
                    android:gravity="fill_vertical"
                    android:layout_toEndOf="@id/like_btn"/>

                <TextView
                    android:id="@+id/comments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comments"
                    android:layout_alignParentEnd="true"
                    android:textColor="@color/colorPrimary"/>



            </RelativeLayout>

        </RelativeLayout>


    </androidx.cardview.widget.CardView>
</LinearLayout>