<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/read_post_parent_view"
    android:background="@drawable/ic_backgr"
    android:layout_height="match_parent"
    tools:context=".ui.ReadPostFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/read_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimaryDark"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/read_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                app:layout_collapseMode="pin"
                app:menu="@menu/read_menu">


            </androidx.appcompat.widget.Toolbar>


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/read_appbar"
            android:layout_marginTop="50dp">


            <androidx.cardview.widget.CardView
                android:id="@+id/reader_card_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <RelativeLayout
                        android:id="@+id/reader_header_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/read_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:ellipsize="end"
                            android:maxLines="@android:integer/status_bar_notification_info_maxnum"
                            android:text="Title"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/read_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/read_title"
                            android:ellipsize="end"
                            android:text="Date" />
                    </RelativeLayout>


                    <ImageView
                        android:id="@+id/read_image"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:layout_below="@id/reader_header_text"
                        android:layout_marginTop="5dp"
                        android:scaleType="fitCenter"
                        android:visibility="gone"

                        />

                    <View
                        android:id="@+id/read_divider"
                        style="@style/Divider"
                        android:layout_below="@id/read_image"
                        android:layout_marginTop="5dp"
                        android:visibility="gone" />

                    <EditText
                        android:id="@+id/read_body"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/read_image"
                        android:layout_marginTop="10dp"
                        android:clickable="false"
                        android:focusable="false"
                        android:gravity="start|end"
                        android:inputType="textMultiLine"
                        android:scrollbars="vertical"
                        android:background="@null"
                        android:text="@string/body_message"
                        android:textAlignment="viewStart"
                        android:textDirection="ltr" />


                    <View
                        android:id="@+id/read_divider2"
                        style="@style/Divider"
                        android:layout_below="@id/read_body"
                        android:layout_marginTop="5dp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/read_divider2"

                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/read_edit_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/edit_btn"
                            app:srcCompat="@drawable/ic_edit_white" />

                        <ImageView
                            android:id="@+id/read_like_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_toEndOf="@id/read_delete_btn"
                            android:contentDescription="@string/like_btn"
                            app:srcCompat="@drawable/ic_favorite_white" />


                        <ImageView
                            android:id="@+id/read_delete_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_toEndOf="@id/read_edit_btn"
                            android:contentDescription="@string/delete_btn"
                            app:srcCompat="@drawable/ic_delete_white" />

                        <TextView
                            android:id="@+id/read_num_of_likes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@id/read_like_btn"
                            android:gravity="center"
                            android:text="0"
                            android:textColor="@color/colorPrimaryDark" />

                        <TextView
                            android:id="@+id/read_comments"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:text="@string/comments"
                            android:textColor="@color/colorPrimaryDark" />


                    </RelativeLayout>

                </RelativeLayout>


            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/comment_recyclerView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/reader_card_container"
                android:layout_margin="15dp"
                tools:listitem="@layout/comment_row"
                tools:visibility="visible" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>